k8s/expense-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: expense
  name: expense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense
  template:
    metadata:
      labels:
        app: expense
    spec:
      containers:
        - image: expense:latest
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          name: expense
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
