k8s/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: proxy
  name: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: proxy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/budget-book-default: "true"
        io.kompose.service: proxy
    spec:
      containers:
        - image: nginx:alpine
          name: proxy
          ports:
            - containerPort: 80
              hostPort: 80
              protocol: TCP
            - containerPort: 443
              hostPort: 443
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: proxy-claim0
            - mountPath: /etc/nginx/certs
              name: proxy-claim1
      restartPolicy: Always
      volumes:
        - name: proxy-claim0
          persistentVolumeClaim:
            claimName: proxy-claim0
        - name: proxy-claim1
          persistentVolumeClaim:
            claimName: proxy-claim1
