k8s/statistics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: statistics
  name: statistics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statistics
  template:
    metadata:
      labels:
        app: statistics
    spec:
      containers:
        - image: statistics:latest
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          name: statistics
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
