k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
