k8s/expense-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: myjob
  namespace: default
spec:
  selector:
    app: myjob
  type: ClusterIP
  ports:
  - name: myjob
    protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 30001
---
