k8s/mysql-externalName-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: usermgmtdb.crgfhtb86ffa.eu-central-1.rds.amazonaws.com
