k8s/statistics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statistics
spec:
  selector:
    app: statistics
  ports:
    - name: "http"
      port: 3000
      targetPort: 3000
