k8s/ingress-prometheus.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus
  namespace: metrics
spec:
  tls:
    - hosts:
        - prometheus.me
      secretName: prometheus.me
  ingressClassName: nginx
  rules:
    - host: prometheus.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-server 
                port:
                  number: 80
